k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scm-tool-gateway
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scm-tool-gateway
  template:
    metadata:
      labels:
        app: scm-tool-gateway
    spec:
      imagePullSecrets:
        - name: scm-registrypullsecret
      containers:
        - name: scm-tool-gateway
          image: smartcitymedia/scm-tool-gateway-http:0.0.28
          imagePullPolicy: Always
          ports:
            - containerPort: 7070
          volumeMounts:
            - name: context-store
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /health
              port: 7070
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health
              port: 7070
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

      volumes:
        - name: context-store
          persistentVolumeClaim:
            claimName: scm-tool-gateway-context-pvc
